[MDF] SQLite Installation and Usage with Vcpkg

--- a/技术类的博客或站点.md
+++ b/技术类的博客或站点.md
@@ -17,6 +17,8 @@
 
 [SFML (sfml-dev.org)](https://www.sfml-dev.org/index.php)
 
+[SQLite Installation and Usage with Vcpkg](https://vcpkg.readthedocs.io/en/latest/examples/installing-and-using-packages/index.html)
+
 ## 云原生
 
 [云原生实验室 (icloudnative.io)](https://icloudnative.io/)
