[MDF] add more blog address

--- a/常用英文缩写与中英文对照.md
+++ b/常用英文缩写与中英文对照.md
@@ -5,7 +5,9 @@ voice 语音
 video 视频
 thumb 缩略图
 
-## 常用英文缩写
+
+
+## 常用中英文缩写对照
 
 | 缩写 | 全称                            | 说明               |
 | ---- | ------------------------------- | ------------------ |
@@ -62,6 +64,21 @@ thumb 缩略图
 |	DST  |	destination|目标文件|
 
 
+
+## 文档书写规范
+
+### 技术名词拼写要规范
+
+- Java
+- JavaScript
+- Python
+- MySQL
+- HBase
+- RESTful
+
+### 中英文混排要规范
+
+中文描述使用中文符号，中文和英文、数字之间间隔一个「空格」
 
 
 
