--- a/技术类的博客或站点.md
+++ b/技术类的博客或站点.md
@@ -24,3 +24,12 @@
 [云原生实验室 (icloudnative.io)](https://icloudnative.io/)
 
 > 一个很有趣的站点
+
+## 个人博客
+
+[聊一聊我来腾讯一年多的感受 | Kaito's Blog](http://kaito-kidd.com/2023/08/08/tencent-experience-over-a-year/)
+
+## 版本控制
+
+[语义化版本 2.0.0](https://semver.org/lang/zh-CN/)
+
