[MDF] add some blog website

--- a/技术类的博客或站点.md
+++ b/技术类的博客或站点.md
@@ -1,15 +1,23 @@
 ## 腾讯云开发者社区
 
 [Windows微信DPI适配](https://cloud.tencent.com/developer/article/1030909)
+[Content-Disposition (Headers) - HTTP 中文开发手册](https://cloud.tencent.com/developer/section/1189916)
 
 
-## 看雪社区-编程技术
+
+## 看雪社区
+
 [Win32应用程序DPI适配的设计与实现](https://bbs.kanxue.com/thread-267416.htm)
+
+
 
 ## GitBook
 
-### CS基础知识
 [Missing Necessary Knowledge for CS Students](https://gaoge011022.gitbook.io/missing-necessary-knowledge-for-cs-students/)
+
+
+
+## 图形库
 
 [An OpenGL library | GLFW](https://www.glfw.org/)
 
@@ -17,19 +25,77 @@
 
 [SFML (sfml-dev.org)](https://www.sfml-dev.org/index.php)
 
+
+## C++包管理器
 [SQLite Installation and Usage with Vcpkg](https://vcpkg.readthedocs.io/en/latest/examples/installing-and-using-packages/index.html)
+
+
 
 ## 云原生
 
-[云原生实验室 (icloudnative.io)](https://icloudnative.io/)
+[云原生实验室](https://icloudnative.io/)
 
-> 一个很有趣的站点
+[GitOps 介绍 · 云原生实验室](https://icloudnative.io/posts/what-is-gitops/)
+
+
 
 ## 个人博客
 
+[高性能服务器开发 技术专栏](https://balloonwj.github.io/cpp-guide-web/)
+
+[Tech For Fun](https://kaelzhang81.github.io/)
+
 [聊一聊我来腾讯一年多的感受 | Kaito's Blog](http://kaito-kidd.com/2023/08/08/tencent-experience-over-a-year/)
+
+[记离职鹅厂最后30天的真实心路历程- 即时通讯开发者社区](http://www.52im.net/thread-2378-1-1.html)
+
+[对敏捷开发的理解 - 杂谈](http://www.kkh86.com/it/team-manage/guide-oth-scrum.html)
+
+[概念 -概述 | C++ 全栈知识体系](https://stibel.icu/md/method/concept/concept-basic.html)
+
+[技术文章摘抄](https://learn.lianglianglee.com/)
+
+[Google Test的各种断言整理](https://www.chuxin911.com/google_test_3_20211210/)
+
+[LLVM Coding Standards - 中文翻译 - 小胖西瓜 - 博客园](https://www.cnblogs.com/shuqin/p/12639441.html)
+
+[GitHub漫游指南](https://jeeweixin.com/wiki/1469597433724960/1463858791186528)
+
+[字符串格式化漫谈](https://forcemz.net/cxx/2019/04/29/StringFormattingTalk/)
+
+[实现一个可编辑的Windowless RichEdit](https://zplutor.github.io/2015/12/06/implement-an-editable-windowless-richedit/)
+
+
+
+
+
+
+
+## 知乎
+
+[微软工程师必修技术之《用户键盘鼠标输入》](https://zhuanlan.zhihu.com/p/532242937)
+
+
 
 ## 版本控制
 
 [语义化版本 2.0.0](https://semver.org/lang/zh-CN/)
+
+
+
+## 游戏
+
+[新手必读：常规游戏项目开发流程 | 游戏大观](http://www.gamelook.com.cn/2015/10/232818)
+
+## JSON
+
+[使用json编写应用程序的规范](https://jsonapi.org/)
+
+
+
+
+
+
+
+
 
