[MDF] add some word for function name and some web sites

--- a/技术类的博客或站点.md
+++ b/技术类的博客或站点.md
@@ -3,6 +3,14 @@
 [Windows微信DPI适配](https://cloud.tencent.com/developer/article/1030909)
 [Content-Disposition (Headers) - HTTP 中文开发手册](https://cloud.tencent.com/developer/section/1189916)
 
+[SkeyePlayer](https://cloud.tencent.com/developer/article/2269121?areaSource=102001.19&traceId=H8499zZZuiFA6tImXIeq5)
+
+
+
+## 掘金
+
+[SkeyeExPlayer](https://juejin.cn/post/7203557451488510012)
+
 
 
 ## 看雪社区
@@ -14,6 +22,8 @@
 ## GitBook
 
 [Missing Necessary Knowledge for CS Students](https://gaoge011022.gitbook.io/missing-necessary-knowledge-for-cs-students/)
+
+[HelloGitHub](https://hellogithub.com/)
 
 
 
@@ -45,6 +55,8 @@
 
 [Tech For Fun](https://kaelzhang81.github.io/)
 
+[Games for Windows and the DirectX SDK blog](https://walbourn.github.io/where-is-the-directx-sdk-2021-edition/)
+
 [聊一聊我来腾讯一年多的感受 | Kaito's Blog](http://kaito-kidd.com/2023/08/08/tencent-experience-over-a-year/)
 
 [记离职鹅厂最后30天的真实心路历程- 即时通讯开发者社区](http://www.52im.net/thread-2378-1-1.html)
@@ -67,7 +79,9 @@
 
 
 
+## codeproject
 
+[C++ 11 features in Visual C++ 2013 Preview](https://www.codeproject.com/Articles/623872/Cplusplus-features-in-Visual-Cplusplus-Pre)
 
 
 
@@ -93,9 +107,73 @@
 
 
 
+## 技术文档
+[如何写技术文档](https://leoy233.website/%E5%A6%82%E4%BD%95%E5%86%99%E6%8A%80%E6%9C%AF%E6%96%87%E6%A1%A3/)
+
+[如何写好技术文档](http://freeswitch.org.cn/blog/2022/05/write-docs/)
+
+> 程序员既要写好代码，又要写好文档。
+
+因为写文档是非常难的，直到我们读到这篇文章——[《The documentation system》](https://documentation.divio.com/)。
+
+> The Grand Unified Theory of Documentation —— David Laing
+
+写好文档的终极秘密是——首先要理解，文档并不是一个东西，而是四个。看图：
+
+![overview](http://freeswitch.org.cn/images/write-docs/overview.png)
+
+## Mongoose
+
+[Tutorials-HTTP server](https://mongoose.ws/documentation/tutorials/http-server/)
+
+[mongoose魔改历程](http://www.fenlog.com/post/126.html)
+
+## ModernCpp
+[modernescpp](https://www.modernescpp.com/)
+
+[EffectiveModernCpp](https://www.kancloud.cn/kangdandan/book/169966)
+
+## RPC
+[gRPC 异步 API 实例与优势](https://blog.miigon.net/posts/cn-so-difference-between-sync-and-async-grpc/)
 
 
+## GUI
+
+[ Drawing Shapes](https://stungeye.github.io/Programming-1-Notes/docs/07-openframeworks-basics/02-drawing-shapes.html)
+[Allegro 5](https://liballeg.org/a5docs/trunk/getting_started.html)
+[TransparentWindow](https://github.com/riley-x/TransparentWindow)
+[mCtrl ](https://github.com/mity/mctrl/tree/master)
+[WinDrawLib](https://github.com/mity/windrawlib)
 
 
+## Rules
+[360 安全规则集合](https://github.com/Qihoo360/safe-rules/tree/main)
 
+
+## 大厂的技术博客
+
+[腾讯](http://www.alloyteam.com/)
+[美团](https://tech.meituan.com/)
+[滴滴](https://didi.github.io/)
+[淘宝](https://fed.taobao.org/)
+[蚂蚁金服](https://ant.design/)
+[京东](https://aotu.io/)
+[奇虎360](https://weekly.75.team/)
+[有赞技术](https://tech.youzan.com/)
+[百度](http://fex.baidu.com/)
+[饿了么](https://fe.ele.me)
+
+
+## 大厂的github
+
+[腾讯](https://github.com/AlloyTeam/)
+[阿里巴巴](https://github.com/alibaba)
+[百度](fex-team：https://github.com/fex-team/)
+[饿了么](https://github.com/eleme)
+[大众点评](https://github.com/dianping)
+[美团点评](https://github.com/Meituan-Dianping)
+[滴滴出行](https://github.com/didi)
+[字节跳动](https://github.com/bytedance)
+[有赞](https://github.com/youzan)
+[京东凹凸实验室](https://github.com/o2team)
 
