[MDF] add some usefull web sites

--- a/技术类的博客或站点.md
+++ b/技术类的博客或站点.md
@@ -1,31 +1,23 @@
 ## 腾讯云开发者社区
 
-[Windows微信DPI适配](https://cloud.tencent.com/developer/article/1030909)
+[Windows 微信 DPI 适配](https://cloud.tencent.com/developer/article/1030909)
 [Content-Disposition (Headers) - HTTP 中文开发手册](https://cloud.tencent.com/developer/section/1189916)
 
 [SkeyePlayer](https://cloud.tencent.com/developer/article/2269121?areaSource=102001.19&traceId=H8499zZZuiFA6tImXIeq5)
-
-
 
 ## 掘金
 
 [SkeyeExPlayer](https://juejin.cn/post/7203557451488510012)
 
-
-
 ## 看雪社区
 
-[Win32应用程序DPI适配的设计与实现](https://bbs.kanxue.com/thread-267416.htm)
-
-
+[Win32 应用程序 DPI 适配的设计与实现](https://bbs.kanxue.com/thread-267416.htm)
 
 ## GitBook
 
 [Missing Necessary Knowledge for CS Students](https://gaoge011022.gitbook.io/missing-necessary-knowledge-for-cs-students/)
 
 [HelloGitHub](https://hellogithub.com/)
-
-
 
 ## 图形库
 
@@ -35,19 +27,15 @@
 
 [SFML (sfml-dev.org)](https://www.sfml-dev.org/index.php)
 
-
 ## C++包管理器
+
 [SQLite Installation and Usage with Vcpkg](https://vcpkg.readthedocs.io/en/latest/examples/installing-and-using-packages/index.html)
-
-
 
 ## 云原生
 
 [云原生实验室](https://icloudnative.io/)
 
 [GitOps 介绍 · 云原生实验室](https://icloudnative.io/posts/what-is-gitops/)
-
-
 
 ## 个人博客
 
@@ -59,7 +47,7 @@
 
 [聊一聊我来腾讯一年多的感受 | Kaito's Blog](http://kaito-kidd.com/2023/08/08/tencent-experience-over-a-year/)
 
-[记离职鹅厂最后30天的真实心路历程- 即时通讯开发者社区](http://www.52im.net/thread-2378-1-1.html)
+[记离职鹅厂最后 30 天的真实心路历程- 即时通讯开发者社区](http://www.52im.net/thread-2378-1-1.html)
 
 [对敏捷开发的理解 - 杂谈](http://www.kkh86.com/it/team-manage/guide-oth-scrum.html)
 
@@ -67,35 +55,27 @@
 
 [技术文章摘抄](https://learn.lianglianglee.com/)
 
-[Google Test的各种断言整理](https://www.chuxin911.com/google_test_3_20211210/)
+[Google Test 的各种断言整理](https://www.chuxin911.com/google_test_3_20211210/)
 
 [LLVM Coding Standards - 中文翻译 - 小胖西瓜 - 博客园](https://www.cnblogs.com/shuqin/p/12639441.html)
 
-[GitHub漫游指南](https://jeeweixin.com/wiki/1469597433724960/1463858791186528)
+[GitHub 漫游指南](https://jeeweixin.com/wiki/1469597433724960/1463858791186528)
 
 [字符串格式化漫谈](https://forcemz.net/cxx/2019/04/29/StringFormattingTalk/)
 
-[实现一个可编辑的Windowless RichEdit](https://zplutor.github.io/2015/12/06/implement-an-editable-windowless-richedit/)
-
-
+[实现一个可编辑的 Windowless RichEdit](https://zplutor.github.io/2015/12/06/implement-an-editable-windowless-richedit/)
 
 ## codeproject
 
 [C++ 11 features in Visual C++ 2013 Preview](https://www.codeproject.com/Articles/623872/Cplusplus-features-in-Visual-Cplusplus-Pre)
 
-
-
 ## 知乎
 
 [微软工程师必修技术之《用户键盘鼠标输入》](https://zhuanlan.zhihu.com/p/532242937)
 
-
-
 ## 版本控制
 
 [语义化版本 2.0.0](https://semver.org/lang/zh-CN/)
-
-
 
 ## 游戏
 
@@ -103,11 +83,10 @@
 
 ## JSON
 
-[使用json编写应用程序的规范](https://jsonapi.org/)
-
-
+[使用 json 编写应用程序的规范](https://jsonapi.org/)
 
 ## 技术文档
+
 [如何写技术文档](https://leoy233.website/%E5%A6%82%E4%BD%95%E5%86%99%E6%8A%80%E6%9C%AF%E6%96%87%E6%A1%A3/)
 
 [如何写好技术文档](http://freeswitch.org.cn/blog/2022/05/write-docs/)
@@ -126,29 +105,48 @@
 
 [Tutorials-HTTP server](https://mongoose.ws/documentation/tutorials/http-server/)
 
-[mongoose魔改历程](http://www.fenlog.com/post/126.html)
+[mongoose 魔改历程](http://www.fenlog.com/post/126.html)
 
 ## ModernCpp
+
 [modernescpp](https://www.modernescpp.com/)
 
 [EffectiveModernCpp](https://www.kancloud.cn/kangdandan/book/169966)
 
-## RPC
-[gRPC 异步 API 实例与优势](https://blog.miigon.net/posts/cn-so-difference-between-sync-and-async-grpc/)
+[32-bit pointers in a 64-bit world](https://www.codeproject.com/Articles/28818/32-bit-pointers-in-a-64-bit-world)
 
+## RPC
+
+[gRPC 异步 API 实例与优势](https://blog.miigon.net/posts/cn-so-difference-between-sync-and-async-grpc/)
+[gRPC 官方文档中文版](https://doc.oschina.net/grpc?t=58008)
+[Protobuf and gRPC](https://cs.brown.edu/courses/csci0300/2022/assign/labs/lab9.html)
+[buttonrpc](https://stibel.icu/md/project/opensource/buttonrpc/buttonrpc-demo.html)
+[evpp](https://github.com/Qihoo360/evpp/blob/master/readme_cn.md)
+[brpc](https://github.com/apache/brpc/blob/master/docs/cn/server.md)
+[mrpc](https://github.com/gqw/mrpc)
+
+## curl
+
+[download-url-with-original-filename](https://stackoverflow.com/questions/25576697/libcurl-how-to-download-url-with-original-filename-equivalent-for-o-remot)
+
+## 区块链
+
+[区块链原理、设计与应用](https://yeasy.gitbook.io/blockchain_guide/)
 
 ## GUI
 
-[ Drawing Shapes](https://stungeye.github.io/Programming-1-Notes/docs/07-openframeworks-basics/02-drawing-shapes.html)
+[Direct2D Wrapper](https://www.codeproject.com/Articles/1091754/WinDrawLib)
+[Drawing Shapes](https://stungeye.github.io/Programming-1-Notes/docs/07-openframeworks-basics/02-drawing-shapes.html)
 [Allegro 5](https://liballeg.org/a5docs/trunk/getting_started.html)
+
 [TransparentWindow](https://github.com/riley-x/TransparentWindow)
 [mCtrl ](https://github.com/mity/mctrl/tree/master)
 [WinDrawLib](https://github.com/mity/windrawlib)
-
+[现代 DX11 系列教程](https://github.com/MKXJun/DirectX11-With-Windows-SDK.git)
 
 ## Rules
-[360 安全规则集合](https://github.com/Qihoo360/safe-rules/tree/main)
 
+[360 安全规则集合](https://github.com/Qihoo360/safe-rules/tree/main)
 
 ## 大厂的技术博客
 
@@ -158,13 +156,12 @@
 [淘宝](https://fed.taobao.org/)
 [蚂蚁金服](https://ant.design/)
 [京东](https://aotu.io/)
-[奇虎360](https://weekly.75.team/)
+[奇虎 360](https://weekly.75.team/)
 [有赞技术](https://tech.youzan.com/)
 [百度](http://fex.baidu.com/)
 [饿了么](https://fe.ele.me)
 
-
-## 大厂的github
+## 大厂的 github
 
 [腾讯](https://github.com/AlloyTeam/)
 [阿里巴巴](https://github.com/alibaba)
@@ -177,3 +174,5 @@
 [有赞](https://github.com/youzan)
 [京东凹凸实验室](https://github.com/o2team)
 
+[Fir.im](https://www.betaqr.com.cn/)：国内 APP 测试发布平台
+[蒲公英](https://www.pgyer.com/)：国内很不错的移动应用内测及托管的平台
