[MDF] add some web sites

--- a/技术类的博客或站点.md
+++ b/技术类的博客或站点.md
@@ -176,3 +176,20 @@
 
 [Fir.im](https://www.betaqr.com.cn/)：国内 APP 测试发布平台
 [蒲公英](https://www.pgyer.com/)：国内很不错的移动应用内测及托管的平台
+
+[基于C++的rpc demo](https://zhuanlan.zhihu.com/p/419860500)
+[Light-weight RPC framework](https://vorbrodt.blog/2021/04/11/light-weight-rpc-framework/)
+[A tour of CPPZMQ](https://brettviren.github.io/cppzmq-tour/index.html)
+[buttonrpc](https://blog.csdn.net/u011559046/article/details/122133973)
+[Nanomsg](https://nanomsg.org/index.html)
+[Nanomsg vs. ZeroMQ](https://bravenewgeek.com/a-look-at-nanomsg-and-scalability-protocols/)
+[利用FFmpeg进行音频降噪](https://guohongyi.com/2020/09/28/%E5%88%A9%E7%94%A8FFmpeg%E8%BF%9B%E8%A1%8C%E9%9F%B3%E9%A2%91%E9%A2%84%E5%A4%84%E7%90%86/)
+[雷霄骅Blog](https://blog.csdn.net/leixiaohua1020?type=blog)
+[开发者如何编写优雅的技术文档](https://www.frankfeekr.cn/2021/05/16/docs-tutorial/index.html)
+[如何写好技术文档](https://segmentfault.com/a/1190000040409082)
+[技术文档写作的道与术](https://www.imooc.com/article/298147)
+[中文技术文档书写指东](https://sspai.com/post/68349)
+[如何写技术文档](https://leoy233.website/%E5%A6%82%E4%BD%95%E5%86%99%E6%8A%80%E6%9C%AF%E6%96%87%E6%A1%A3/)
+[如何写好一篇技术文档](https://guicai.work/interest/%E5%A6%82%E4%BD%95%E5%86%99%E5%A5%BD%E4%B8%80%E7%AF%87%E6%8A%80%E6%9C%AF%E6%96%87%E6%A1%A3/)
+[Visual Studio documentation for Microsoft C++](https://github.com/MicrosoftDocs/cpp-docs)
+[一文搞懂gRPC和Thrift的基本原理和区别](https://community.eolink.com/d/31189-grpcthrift)
