[MDF] add some web sites

--- a/技术类的博客或站点.md
+++ b/技术类的博客或站点.md
@@ -193,3 +193,5 @@
 [如何写好一篇技术文档](https://guicai.work/interest/%E5%A6%82%E4%BD%95%E5%86%99%E5%A5%BD%E4%B8%80%E7%AF%87%E6%8A%80%E6%9C%AF%E6%96%87%E6%A1%A3/)
 [Visual Studio documentation for Microsoft C++](https://github.com/MicrosoftDocs/cpp-docs)
 [一文搞懂gRPC和Thrift的基本原理和区别](https://community.eolink.com/d/31189-grpcthrift)
+
+[可变长字节码算法 byte_size_from_utf8_first](https://blog.csdn.net/xcwenn/article/details/8843081)
